Updated patch notes for 02/2016

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author_image: "/assets/images/author.png"
 
 paginate:	5
 
-url: "http://valeIT.github.io/"
+url: "http://www.valentinourbano.com"
 baseurl: ""
 twitter_handle: '@valentinourbano'
 
