--- a/_data/apps.json
+++ b/_data/apps.json
@@ -153,7 +153,7 @@
     {
     "name": "Tickery",
     "id": "Tickery",
-    "description": "Tickery allows you to check the buy and sell price of more than 20 currencies.",
+    "description": "Tickery allows you to check the buy and sell price of many currencies.",
     "link": "https://itunes.apple.com/us/app/walutomat-kursy-walut/id1216145372?&at=1010lHG??mt=8",
     "platforms": ["iOS"],
     "fontAwesome": [ "mobile" ]
