--- a/_config.yml
+++ b/_config.yml
@@ -65,3 +65,5 @@ defaults:
       path: "" # an empty string here means all files in the project
     values:
       layout: "post"
+
+exclude: [vendor]
