--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -21,5 +21,6 @@ numberOfReviewers: 0
 # numberOfAssignees: 2
 
 # A list of keywords to be skipped the process that add reviewers if pull requests include it
-# skipKeywords:
-#   - wip
+skipKeywords:
+- wip
+- WIP
