Fix YAML syntax in Ranger config

--- a/.github/ranger.yml
+++ b/.github/ranger.yml
@@ -16,7 +16,7 @@ comments:
     pattern: /duplicate of/i
     labels:
       - duplicate
-
+  - action: label
     pattern: /./ #always add it
     labels:
       - "merge when passing"
