Update uses key

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       run: bundle exec jekyll build
   #   run: bundle exec htmlproofer ./_site --disable-external --check-favicon --check-html --assume_extension
     - name: Deploy preview
-    - uses: rossjrw/pr-preview-action@v1
+      uses: rossjrw/pr-preview-action@v1
       with:
         source-dir: ./_site/
     # The previews will be deleted once something is merged into master since we're using the default github pages action. Once the action becomes configurable, we should add a rule to avoid this: https://github.com/marketplace/actions/deploy-pr-preview
